--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
     "lib": [
       "dom",
       "dom.iterable",
