--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start_deprecated": "react-scripts start",
     "start:ssr": "ts-node server/server.ts",
     "start:build:ssr": "npm run build; npm run start:ssr",
+    "start": "npm run start:build:ssr",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
